[tool.poetry]
name = "pyturbo-aero"
version = "1.0.14"
description = "PyTurbo_Aero is a Turbomachinery blade design library that lets you create a full 3D blades and passages."
authors = ["Paht Juangphanich <paht.juangphanich@nasa.gov>"]
packages = [
    { include = "pyturbo" }
]

[tool.poetry.dependencies]
python = ">=3.9"
plotly = "*"
tqdm = "*"
scipy = "*"
pandas = "*"
numpy = ">2.0.0"
matplotlib = "*"
numpy-stl = "*"
geomdl = "*"
plot3d = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.1.2"]
build-backend = "poetry.masonry.api"    
