[tool.poetry]
name = "pyturbo-aero"
version = "1.0.17"
description = "PyTurbo_Aero is a Turbomachinery blade design library that lets you create a full 3D blades and passages."
authors = ["Paht Juangphanich <paht.juangphanich@nasa.gov>"]
packages = [
    { include = "pyturbo" }
]

[tool.poetry.dependencies]
python = ">=3.10"
plotly = "*"
tqdm = "*"
scipy = "*"
pandas = "*"
numpy = "*"
matplotlib = "*"
numpy-stl = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.1.2"]
build-backend = "poetry.masonry.api"    
